[Lint] Migrate from flake8/isort to ruff for faster linting (#613)
* [Lint] Migrate from flake8/isort to ruff for faster linting

- Replace flake8 and isort with ruff in pre-commit configuration
- Configure comprehensive ruff rule set including pycodestyle, Pyflakes, pyupgrade, flake8-bugbear, flake8-simplify, isort, flake8-comprehensions, flake8-type-checking, and flake8-commas
- Enable automatic fixing with --fix and --unsafe-fixes flags
- Update pre-commit-hooks to v6.0.0 and tj-actions/changed-files to v47.0.0
- Configure per-file ignores for __init__.py and evals/harness.py
- Set line length to 127 characters and target Python 3.10+

This change significantly improves linting performance while maintaining
code quality standards.

* add debugger

* fix ruff rules

* update

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,9 +33,9 @@ Repository = "https://github.com/fla-org/flash-linear-attention"
 [build-system]
 requires = ["setuptools>=45", "wheel"]
 
-[tool.isort]
-line_length = 127
-multi_line_output = 3
+[tool.ruff.lint.isort]
+known-first-party = ["fla"]
+force-sort-within-sections = false
 
 [tool.pytest.ini_options]
 log_cli = true
@@ -43,3 +43,36 @@ log_cli_level = "INFO"
 pythonpath = [
   "."
 ]
+
+[tool.ruff]
+target-version = "py310"
+line-length = 127
+
+[tool.ruff.format]
+docstring-code-format = true
+
+[tool.ruff.lint]
+select = [
+    "E",    # pycodestyle
+    "F",    # Pyflakes
+    "UP",   # pyupgrade
+    "B",    # flake8-bugbear
+    "SIM",  # flake8-simplify
+    "I",    # isort
+    "C4",   # flake8-comprehensions
+    "TCH",  # flake8-type-checking
+    "COM",  # flake8-commas
+    "T",    # flake8-debugger
+]
+ignore = [
+    "E501",
+    "E741",
+    "B023",
+    "B008",
+    "SIM108",
+]
+
+[tool.ruff.lint.per-file-ignores]
+"__init__.py" = ["F401"]
+"fla/utils.py" = ["TCH004"]
+"evals/harness.py" = ["I", "TCH"]
