--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,8 +16,8 @@ classifiers = [
 ]
 requires-python = ">=3.10"
 dependencies = [
-    "torch>=2.5",
-    "transformers>=4.53.0",
+    "torch",
+    "transformers",
     "einops",
 ]
 
